# TraditionalChineseStudy

./: .bunfig  .claude.md  .dockerignore  .env.example  .env.production  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  BUN_MIGRATION.md  Caddyfile  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DOCKER_PORT_INFO.md  Dockerfile  Dockerfile.nextjs  LICENSE  PRD.md  PROJECT_CLEANUP_REPORT.md  QUALITY_ASSURANCE_REPORT.md  README-Docker-Setup.md  README.md  README_RUST_INTEGRATION.md  RUST_BACKEND_MIGRATION.md  SUPABASE_SETUP.md  VERCEL_ENV_SETUP.md  analyze_characters.py  analyze_simple.py  app.js  bunfig.toml  character_analysis_readable.txt  character_analysis_result.txt  cookies.txt  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-data-management.sh  docker-naming-convention.md  docker-start-dev.sh  (+22 more)
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  Cargo.toml  diesel.toml
backend-rust/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend-rust/migrations/: 001_initial.sql
backend-rust/src/: config.rs  database.rs  errors.rs  main.rs
backend-rust/src/handlers/: auth.rs  chapters.rs  characters.rs  classics.rs  health.rs  mod.rs  sentences.rs
backend-rust/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  security.rs
backend-rust/src/models/: chapter.rs  classic.rs  mod.rs  sentence.rs  user.rs
backend-rust/src/services/: mod.rs
backend-rust/src/utils/: api_response.rs  jwt.rs  mod.rs
backend/migrations/2024-01-01-000001_create_users/: up.sql
backend/migrations/2024-01-01-000002_create_hanzi/: down.sql  up.sql
backend/migrations/2024-01-01-000003_create_comments/: up.sql
backend/src/: auth.rs  characters.rs  database.rs  errors.rs  main.rs  models.rs  redis_client.rs  schema.rs  validation.rs
caddy/: Caddyfile.docker
components/: CharacterAnimation.tsx  ChineseUIComponents.tsx  EnhancedChineseWritingPractice.tsx  ErrorBoundary.tsx  HanziWriter.tsx  MobileNavigation.tsx  Navigation.tsx  PinyinPractice.tsx  StrokeAnimator.tsx  WritingPractice.tsx
config/: logger.js
cron/: keepalive.js
data/: characters.json  daodejing.json  dizigui.json  sanzijing.json
database/: optimize-queries.sql
docs/: API_INTEGRATION.md  DESIGN_SYSTEM.md  MAGIC_UI_FINAL_IMPLEMENTATION.md  MAGIC_UI_INTEGRATION.md  MIGRATION_GUIDE.md  QUICK_START.md  TECH_UPGRADE_PLAN.md  UPGRADE_COMPLETE.md
hooks/: useCharacters.ts
lib/: api-client.ts  api-middleware.ts  database.ts  models.ts
models/: AvatarSet.js  (+15 more)
(+114 files in other folders)
