[package]
name = "xiaoxiao-dushulang-backend"
version = "2.0.0"
edition = "2021"
description = "小小读书郎后端 API - Rust + Warp 实现"
authors = ["Developer"]
license = "MIT"

[dependencies]
# Web framework
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Authentication & Security
bcrypt = "0.15"
jsonwebtoken = "9.2"
argon2 = "0.5"

# Configuration & Environment
config = "0.14"
dotenv = "0.15"
once_cell = "1.19"

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# Caching
redis = { version = "0.24", features = ["aio", "tokio-comp"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# CORS
warp-cors = "0.2"

# Rate limiting
governor = "0.6"

# Compression
flate2 = "1.0"

# TLS
rustls = "0.22"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "server"
path = "src/main.rs"