[package]
name = "traditional-chinese-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid"] }
diesel_migrations = "2.1"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Redis caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CORS
warp-cors = "0.2"

[dev-dependencies]
tokio-test = "0.4"
